[tool.poetry]
name = "health-data"
version = "0.1.0"
description = "Collate health data from various services into one place."
authors = ["Bilal Chughtai <brchughtaii@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
oura-ring = "^0.3.0"
python-dotenv = "^1.0.1"
ipykernel = "^6.29.2"
pandas = "^2.2.0"
gspread = "^6.0.1"
gspread-dataframe = "^3.3.1"
oauth2client = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
