[tool.poetry]
name = "health_dashboard"
version = "0.1.0"
description = "Collate health data from various services into one place."
authors = ["Bilal Chughtai <brchughtaii@gmail.com>"]
readme = "README.md"
packages = [
    { include = "backend" },
    { include = "frontend" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
oura-ring = "^0.3.0"
python-dotenv = "^1.0.1"
ipykernel = "^6.29.2"
pandas = "^2.2.0"
gspread = "^6.0.1"
gspread-dataframe = "^3.3.1"
oauth2client = "^4.1.3"
stravalib = "^2.3"
dash = "^2.15.0"
selenium = "^4.21.0"
webdriver-manager = "^4.0.2"
garminconnect = "^0.2.26"
streamlit = "^1.45.1"
boto3 = "^1.38.23"
cryptography = "^45.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
typeCheckingMode = "standard"